# LoopWire

./: .gitignore  README.md  SETUP.md
backend/: .env.example  pyproject.toml  render.yaml
backend/app/: auth.py  config.py  email_delivery.py  embeddings.py  engagement.py  extraction.py  init_db.py  loopwire_send.py  main.py  models.py  personalization.py  scheduler.py  schemas.py  summarize.py  telegram_bot.py  url_utils.py  worker.py
backend/app/routers/: api.py
backend/scripts/: demo_summary.py
backend/tests/: test_extraction_live.py  test_personalization_live.py
dashboard/: auth.ts  package-lock.json  package.json  proxy.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/log/: page.tsx
dashboard/app/log/[id]/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/signal/: page.tsx
dashboard/app/signin/: page.tsx
dashboard/app/wire/: page.tsx
dashboard/components/: DispatchHeader.tsx  EmptyState.tsx  ItemSlip.tsx  Nav.tsx  ProfileStatusBadge.tsx  SignalBar.tsx  WireRow.tsx
dashboard/lib/: api.ts  format.ts
