[project]
name = "loopwire-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "resend>=2.32.2",
    "sqlalchemy>=2.0.51",
    "trafilatura>=2.1.0",
    "uvicorn[standard]>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]
